# irc2024-ros2-migration

./: CMakeLists.txt  README.md  Systems_check.py  package.xml  test.txt
gui/tkinter_GUI/: ML_gui_test.py  Spectro_ros.py  gui_test.py  interface_node.py  kratos_gui.py  new_gui.py
include/irc2024/cv_bridge/: cv_bridge.h
include/irc2024/geometry_msgs/: Accel.h  AccelStamped.h  AccelWithCovariance.h  AccelWithCovarianceStamped.h  Inertia.h  InertiaStamped.h  Point.h  Point32.h  PointStamped.h  Polygon.h  PolygonStamped.h  Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  QuaternionStamped.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  TwistWithCovarianceStamped.h  Vector3.h  Vector3Stamped.h  Wrench.h  WrenchStamped.h
include/irc2024/image_transport/: camera_publisher.h  camera_subscriber.h  image_transport.h  loader_fwds.h  publisher.h  publisher_plugin.h  raw_publisher.h  raw_subscriber.h  simple_publisher_plugin.h  simple_subscriber_plugin.h  single_subscriber_publisher.h  subscriber.h  subscriber_filter.h  subscriber_plugin.h  transport_hints.h
include/irc2024/nav_msgs/: GetMap.h  GetMapAction.h  GetMapActionFeedback.h  GetMapActionGoal.h  GetMapActionResult.h  GetMapFeedback.h  GetMapGoal.h  GetMapRequest.h  GetMapResponse.h  GetMapResult.h  GetPlan.h  GetPlanRequest.h  GetPlanResponse.h  GridCells.h  LoadMap.h  LoadMapRequest.h  LoadMapResponse.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h  SetMap.h  SetMapRequest.h  SetMapResponse.h
include/irc2024/ros/: advertise_service_options.h  callback_queue.h  connection.h  console.h  datatypes.h  duration.h  file_log.h  forwards.h  internal_timer_manager.h  io.h  message_event.h  message_forward.h  message_traits.h  node_handle.h  poll_manager.h  poll_set.h  publication.h  publisher.h  publisher_link.h  rosout_appender.h  serialization.h  service.h  service_callback_helper.h  service_client.h  service_client_link.h  service_publication.h  service_server.h  service_server_link.h  spinner.h  statistics.h  steady_timer.h  subscribe_options.h  subscriber.h  subscriber_link.h  subscription.h  subscription_callback_helper.h  subscription_queue.h  time.h  timer.h  timer_manager.h  (+6 more)
include/irc2024/ros/transport/: transport.h  transport_tcp.h
include/irc2024/rosconsole/: macros_generated.h
include/irc2024/sensor_msgs/: BatteryState.h  CameraInfo.h  ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Image.h  Imu.h  JointState.h  Joy.h  JoyFeedback.h  JoyFeedbackArray.h  LaserEcho.h  LaserScan.h  MagneticField.h  MultiDOFJointState.h  MultiEchoLaserScan.h  NavSatFix.h  NavSatStatus.h  PointCloud.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfo.h  SetCameraInfoRequest.h  SetCameraInfoResponse.h  Temperature.h  TimeReference.h  fill_image.h  point_cloud2_iterator.h  point_cloud_conversion.h
include/irc2024/sensor_msgs/impl/: point_cloud2_iterator.h
include/irc2024/std_msgs/: Bool.h  Byte.h  ByteMultiArray.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float32MultiArray.h  Float64.h  Float64MultiArray.h  Header.h  Int16.h  Int16MultiArray.h  Int32.h  Int32MultiArray.h  Int64.h  Int64MultiArray.h  Int8.h  Int8MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  String.h  Time.h  UInt16.h  UInt16MultiArray.h  UInt32.h  UInt32MultiArray.h  UInt64.h  UInt64MultiArray.h  UInt8.h  UInt8MultiArray.h  builtin_bool.h  builtin_double.h  builtin_float.h  builtin_int16.h  builtin_int32.h  builtin_int64.h  builtin_int8.h  builtin_string.h  (+5 more)
src/: LD_setup_mega.py  LD_setup_uno.py  Spectro_ros.py  base_bevel_stepper_v2.py  base_control.cpp  cam_gimble.py  cam_la_v2.py  camfeed1.cpp  camfeed2.cpp  camfeed3.cpp  connection_loss.py  gps_controls.py  qrcode.py  retrace.py  sensors_ros.py  teleop.cpp  videofeed1.cpp  videofeed2.cpp  videofeed3.cpp
